ingress-fast.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fast-app
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: fast.zwirtes.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: fastapi-service
            port:
              number: 8001
